2010-03-03  Steve Falkenburg  <sfalken@apple.com>

        Rubber stamped by Adam Roben.

        Fix bogus xcopy that was polluting source tree at build time.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreCommon.vsprops:

2010-03-02  Fridrich Strba  <fridrich.strba@bluewin.ch>

        Reviewed by Oliver Hunt.

        Allow building smoothly on win32 and win64 using GCC
        https://bugs.webkit.org/show_bug.cgi?id=35607

        * jit/JITStubs.h:
        * runtime/Collector.cpp:
        (JSC::Heap::allocateBlock):
        (JSC::Heap::freeBlockPtr):
        (JSC::currentThreadStackBase):

2010-03-02  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by David Levin.

        Revert database thread changes that are no longer required
        https://bugs.webkit.org/show_bug.cgi?id=35519

        Jochen Eisinger created 55214 and 55247 to track which database
        owns which thread.  Dmitry suggested that this could also
        be done via TLS, though.  After exploring the options, Jochen
        chose to go the TLS route, so these patches are no longer needed.

        * wtf/Threading.h:
        * wtf/ThreadingNone.cpp:
        (WTF::isMainThread):
        * wtf/ThreadingPthreads.cpp:
        (WTF::identifierByPthreadHandle):
        (WTF::establishIdentifierForPthreadHandle):
        (WTF::pthreadHandleForIdentifier):
        (WTF::createThreadInternal):
        (WTF::currentThread):
        * wtf/ThreadingWin.cpp:
        (WTF::threadMap):
        (WTF::storeThreadHandleByIdentifier):
        (WTF::threadHandleForIdentifier):
        (WTF::createThreadInternal):

2010-03-02  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

        Reviewed by Simon Hausmann.

        Fix QScriptValue::toString().

        More ECMA Script compliance, especially for values as NaN, Inifinite
        and really big/small numbers.

        [Qt] QScriptValue::toString() returns incorrect values
        https://bugs.webkit.org/show_bug.cgi?id=34850
