@@ -1,3 +1,12 @@
+2010-03-03  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Geoff Garen.
+
+        Add virtual memory tags for TCMalloc and WebCore's purgeable buffers.
+
+        * platform/mac/PurgeableBufferMac.cpp:
+        (WebCore::PurgeableBuffer::create):  Use the VM tag.
+
 2010-03-03  Dumitru Daniliuc  <dumi@chromium.org>
 
         Reviewed by nobody, build fix.
